automatically backed up by learn

--- a/html/index.html
+++ b/html/index.html
@@ -11,6 +11,6 @@
 </script>
 
 <script>
-  $("#yo").append("hey hey hey hey!!!!!");
+ $('#image').prepend('<img id="theImg" src="theImg.png" />')
 </script>
 </body>
