--- a/html/index.html
+++ b/html/index.html
@@ -11,6 +11,6 @@
 </script>
 
 <script>
- $('#image').prepend('<img id="theImg" src="theImg.png" />')
+ $('#image').prepend('<img id="image" src="https://s3.amazonaws.com/learn-verified/painting-with-dog.gif" />')
 </script>
 </body>
